--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,16 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.+'
+    testImplementation "androidx.test:core:1.3.0"
+    testImplementation "androidx.test.ext:junit:1.1.2"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
+    testImplementation "androidx.test:runner:1.3.0"
+    testImplementation "androidx.test:rules:1.3.0"
+
+    testImplementation "androidx.arch.core:core-runtime:$arch_core"
+    testImplementation "androidx.arch.core:core-testing:$arch_core"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
