--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,47 +42,57 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // ui
     implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.fragment:fragment-ktx:1.3.6'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // paging
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
+    // navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
-    implementation "com.google.dagger:hilt-android:2.37"
-    kapt "com.google.dagger:hilt-android-compiler:2.37"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    // lifecycle
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
-    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    // hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_vm_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_compiler_version"
 
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    // net, okhttp3, retrofit2
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_ver"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_ver"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_ver"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_ver"
+
+    // log
+    implementation "com.jakewharton.timber:timber:$timber_ver"
+
+    // glide
+    implementation "com.github.bumptech.glide:glide:$glide_ver"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_ver"
+
+    //test
+    testImplementation "org.mockito:mockito-core:$mockito_ver"
+    testImplementation "org.mockito:mockito-inline:$mockito_ver"
+    testImplementation "androidx.arch.core:core-testing:$arch_core"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     testImplementation 'junit:junit:4.+'
     testImplementation "androidx.test:core:1.3.0"
-    testImplementation "androidx.test.ext:junit:1.1.2"
-    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
-    testImplementation "androidx.test:runner:1.3.0"
-    testImplementation "androidx.test:rules:1.3.0"
-
-    testImplementation "androidx.arch.core:core-runtime:$arch_core"
-    testImplementation "androidx.arch.core:core-testing:$arch_core"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
-    testImplementation 'org.mockito:mockito-core:3.6.28'
-    testImplementation 'org.mockito:mockito-inline:3.6.28'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation "androidx.test.ext:junit:$junit_ver"
+    testImplementation "androidx.test.ext:junit-ktx:$junit_ver"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ver"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
