--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,24 @@
 buildscript {
     ext {
         kotlin_version = "1.5.10"
-        nav_version = "2.4.0-alpha02"
         paging_version = '3.0.0'
         lifecycle_version = '2.3.1'
-        arch_core = '2.1.0'
         coroutines_version = '1.4.1'
+        nav_version = "2.4.0-alpha02"
+
+        timber_ver = '4.7.1'
+
+        hilt_version = '2.37'
+        hilt_vm_version = '1.0.0-alpha03'
+        hilt_compiler_version = '1.0.0'
+
+        okhttp3_ver='4.9.1'
+        retrofit2_ver='2.9.0'
+        glide_ver='4.12.0'
+
+        junit_ver='1.1.2'
+        arch_core = '2.1.0'
+        mockito_ver='3.6.28'
     }
     repositories {
         google()
@@ -16,7 +29,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.37'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
